infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-expiration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-expiration
  template:
    metadata:
      labels:
        app: ticketing-expiration
    spec:
      containers:
      - name: ticketing-expiration
        image: vinayakbhat430learn/ticketing-expiration
        resources:
          limits:
            memory: "2048Mi"
            cpu: "1000m"
