infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-client
  template:
    metadata:
      labels:
        app: ticketing-client
    spec:
      containers:
      - name: ticketing-client
        image: vinayakbhat430learn/ticketing-client
        resources:
          limits:
            memory: "4096Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-client-srv
spec:
  selector:
    app: ticketing-client
  ports:
  - name: ticketing-client
    protocol: TCP
    port: 3000
    targetPort: 3000
