infra/k8s/expiration-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-expiration-redis-depl
spec:
  selector:
    matchLabels:
      app: ticketing-expiration-redis
  template:
    metadata:
      labels:
        app: ticketing-expiration-redis
    spec:
      containers:
      - name: ticketing-expiration-redis
        image: redis
        resources:
          limits:
            memory: "2046Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-expiration-redis-srv
spec:
  selector:
    app: ticketing-expiration-redis
  ports:
  - name: db
    protocol: TCP
    port: 6379
    targetPort: 6379
