infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-orders
  template:
    metadata:
      labels:
        app: ticketing-orders
    spec:
      containers:
      - name: ticketing-orders
        image: vinayakbhat430learn/ticketing-orders
        resources:
          limits:
            memory: "2048Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-orders-srv
spec:
  selector:
    app: ticketing-orders
  ports:
  - port: 3000
    targetPort: 3000
    name: ticketing-orders
    protocol: TCP
