infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-payments
  template:
    metadata:
      labels:
        app: ticketing-payments
    spec:
      containers:
      - name: ticketing-payments
        image: vinayakbhat430learn/ticketing-payments
        resources:
          limits:
            memory: "2048Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-payments-srv
spec:
  selector:
    app: ticketing-payments
  ports:
  - port: 3000
    targetPort: 3000
    name: ticketing-payments
    protocol: TCP
