infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-tickets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-tickets
  template:
    metadata:
      labels:
        app: ticketing-tickets
    spec:
      containers:
      - name: ticketing-tickets
        image: vinayakbhat430learn/ticketing-tickets
        resources:
          limits:
            memory: "2048Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-tickets-srv
spec:
  selector:
    app: ticketing-tickets
  ports:
  - port: 3000
    targetPort: 3000
    name: ticketing-tickets
    protocol: TCP
